--- a/.config/i3/i3status.conf
+++ b/.config/i3/i3status.conf
@@ -35,7 +35,7 @@ wireless _first_ {
 volume master {
         format = " %volume"
         format_muted = " (%volume)"
-        device = "pulse:1"
+        device = "pulse:0"
         mixer = "Master"
         mixer_idx = 0
 }
@@ -49,6 +49,7 @@ battery 1 {
         threshold_type = percentage
         integer_battery_capacity = true
         color_good = "#0000FF"
+        path="/sys/class/power_supply/BAT0/uevent"
 }
 
 run_watch DHCP {
