--- a/.config/i3/config
+++ b/.config/i3/config
@@ -69,6 +69,10 @@ bindsym $mod+Shift+bracketright move workspace to output right
 gaps inner 10 
 gaps outer 0 
 
+# change volume
+bindsym $mod+Shift+Up exec amixer set Master 10.0%+
+bindsym $mod+Shift+Down exec amixer set Master 10.0%-
+
 # BORDERLESS CONTAINER
 #i3-msg border none 
 
@@ -126,7 +130,7 @@ bindsym $mod+space focus mode_toggle
 bindsym $mod+a focus parent
 
 # focus the child container
-bindcode $mod+d focus child
+# bindcode $mod+d focus child
 
 
 # NAME WORKSPACES
@@ -137,11 +141,11 @@ set $WORKSPACE_4 4:Code
 set $WORKSPACE_5 5:Servers
 
 # switch to workspace
-bindsym $mod+1 workspace $WORKSPACE_1
-bindsym $mod+2 workspace $WORKSPACE_2
-bindsym $mod+3 workspace $WORKSPACE_3
-bindsym $mod+4 workspace $WORKSPACE_4
-bindsym $mod+5 workspace $WORKSPACE_5
+bindsym $mod+1 workspace 1
+bindsym $mod+2 workspace 2
+bindsym $mod+3 workspace 3
+bindsym $mod+4 workspace 4
+bindsym $mod+5 workspace 5
 bindsym $mod+6 workspace 6
 bindsym $mod+7 workspace 7
 bindsym $mod+8 workspace 8
@@ -159,6 +163,13 @@ bindsym $mod+Shift+ampersand move container to workspace 7
 bindsym $mod+Shift+asterisk move container to workspace 8
 bindsym $mod+Shift+parenleft move container to workspace 9
 bindsym $mod+Shift+parenright move container to workspace 10
+
+# assign workspaces to my monitors
+workspace 1 output eDP-1
+workspace 2 output HDMI-1
+workspace 3 output HDMI-1
+workspace 4 output DP-1
+workspace 5 output DP-1
 
 # reload the configuration file
 bindsym $mod+Shift+C reload
@@ -198,8 +209,8 @@ client.unfocused #333333 #1fb754 #ffffff
 # client.urgent			              #383a3b #383a3b  #ee0000
 
 # VOLUME ADJUSTMENT
-bindsym $MOD+SHIFT+Up exec amixer set Master 10.0%+
-bindsym $MOD+SHIFT+Down exec amixer set Master 10.0%-
+# bindsym $MOD+SHIFT+Up exec amixer set Master 10.0%+
+# bindsym $MOD+SHIFT+Down exec amixer set Master 10.0%-
 
 
 # Start i3bar to display a workspace bar (plus the system information i3status
