--- a/.config/i3/config
+++ b/.config/i3/config
@@ -219,7 +219,8 @@ client.unfocused #333333 #1fb754 #ffffff
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-  status_command i3status --config ~/.config/i3/i3status.conf
+  # status_command i3status --config ~/.config/i3/i3status.conf
+  status_command i3blocks
 #status_command conky -c /home/xxx/.i3/.conkyrc
 #	tray_output none
     position bottom
@@ -246,9 +247,12 @@ bar {
 # exec --no-startup-id i3-msg 'workspace $WORKSPACE_4; exec gvim;'
 # exec --no-startup-id i3-msg 'workspace $WORKSPACE_5; exec konsole; exec konsole; exec konsole;'
 #exec ~/.dropbox-dist/dropboxd
+#
+exec --no-startup-id nm-applet
+exec --no-startup-id clipit
 exec nitrogen --restore
 #exec xscreensaver -no-splash
 exec --no-startup-id xfce4-volumed
 
 # set monitors in correct position
-exec xrandr --output DP-1 --pos 1920x0 --output DP-3 --pos 0x0 --primary
+# exec xrandr --output DP-1 --pos 1920x0 --output DP-3 --pos 0x0 --primary
