updates from work computer

--- a/.config/i3/i3status.conf
+++ b/.config/i3/i3status.conf
@@ -27,6 +27,15 @@ order += "battery 1"
 order += "load"
 order += "tztime local"
 
+[calendar]
+command=~/.config/i3/calendar.sh
+interval=1
+LABEL=
+DATEFMT=+%H:%M:%S
+# SHORTFMT=+%H:%M:%S
+HEIGHT=180
+WIDTH=220
+
 wireless _first_ {
         format_up = " (%essid - %quality) %ip"
         format_down = "down"
