--- a/.config/terminator/config
+++ b/.config/terminator/config
@@ -1,5 +1,6 @@
 [global_config]
   borderless = True
+  enabled_plugins = LaunchpadCodeURLHandler, APTURLHandler, LaunchpadBugURLHandler
   extra_styling = False
 [keybindings]
 [layouts]
@@ -19,6 +20,11 @@
     foreground_color = "#eeeeec"
     login_shell = True
     palette = "#000000:#cc0000:#0ac400:#c4a000:#3465a4:#75507b:#06989a:#d3d7cf:#555753:#ef2929:#44de51:#fce94f:#729fcf:#ad7fa8:#34e2e2:#eeeeec"
+    scrollback_infinite = True
     scrollbar_position = hidden
     show_titlebar = False
     use_system_font = False
+  [[blank]]
+    background_color = "#ffffff"
+    cursor_color = "#aaaaaa"
+    foreground_color = "#000000"
